# Map2Prop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  map2prop.fgd
.github/: CONTRIBUTING.md
common/: CMakeLists.txt  utils.h
common/src/: CMakeLists.txt  binutils.cpp  binutils.h  utils.cpp  utils.h
config/src/: CMakeLists.txt  config.cpp  config.h  configfile.cpp  configfile.h
formats/: obj_format.h  rmf_format.cpp  rmf_format.h  wad3handler.cpp
formats/src/: CMakeLists.txt  bmp8bpp.cpp  bmp8bpp.h  entity.cpp  entity.h  export.cpp  export.h  jmf_format.cpp  jmf_format.h  map_format.cpp  map_format.h  obj_format.cpp  obj_format.h  ol_format.cpp  ol_format.h  rmf_format.cpp  rmf_format.h  wad3.cpp  wad3.h  wad3handler.cpp  wad3handler.h
geometry/: ear_clip.cpp  ear_clip.h  geometry.cpp
geometry/src/: CMakeLists.txt  ear_clip.cpp  ear_clip.h  entity.h  geometry.cpp  geometry.h  halfedge.cpp  halfedge.h
logging/src/: logging.cpp  logging.h
map/src/: bmp8bpp.h  entity.cpp  entity.h  map_format.cpp
map2prop/: CMakeLists.txt  map2prop.rc  resource.h
map2prop/src/: CMakeLists.txt  main.cpp
src/common/: binutils.h  utils.cpp
src/config/: config.cpp  config.h  configfile.cpp
src/formats/: bmp8bpp.h  entity.cpp  entity.h  export.cpp  export.h  jmf_format.cpp  jmf_format.h  map_format.cpp  map_format.h  obj_format.cpp  wad3.h  wad3handler.h
src/geometry/: geometry.cpp  geometry.h  halfedge.cpp  halfedge.h
src/tests/: CMakeLists.txt  test_earclip.cpp  test_geometry.cpp  test_map.cpp
tests/src/: CMakeLists.txt  test_earclip.cpp  test_geometry.cpp  test_halfedge.cpp
